# kanji-flash-cards

./: .gitignore  README.md
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
kanji-app/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
kanji-app/documentation/: changelog.md  software_architecture.md  software_specification.md  test_documentation.md  tyoaikakirjanpito.md  user_manual.md  vaatimusmaarittely.md
kanji-app/src/: index.py  learn.py  review.py  ui.py
kanji-app/src/data/: default.csv  kanji-list.json  kanji-meaning.json
kanji-app/src/entities/: card.py  kanji.py  pile.py  session.py
kanji-app/src/services/: kanji_service.py  ui_service.py
kanji-app/src/tests/: kanji_service_test.py  review_test.py  session_test.py  ui_test.py
kanji-app/src/tests/entities/: card_test.py
kanji-app/src/ui/: gui.py  io.py  learn_gui.py  learn_view.py  menu_gui.py  review_gui.py  review_view.py  ui.py
laskarit/viikko1/: README.md  gitlog.txt
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
