[tool.poetry]
name = "kanji-app"
version = "0.1.0"
description = ""
authors = ["Johanna Lehto <johannaeveliinalehto@gmail.com>"]
readme = "README.md"
packages = [{include = "kanji_app"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pylint = "^2.15.6"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
